glib/girepository/girepository-wrapper.h

extern void glib_listautoptr_cleanup_GIInterfaceInfo_wrapper(GList ** _l);
extern void glib_slistautoptr_cleanup_GIInterfaceInfo_wrapper(GSList ** _l);
extern void glib_queueautoptr_cleanup_GIInterfaceInfo_wrapper(GQueue ** _q);
extern void glib_autoptr_clear_GIObjectInfo_wrapper(GIObjectInfo * _ptr);
extern void glib_autoptr_cleanup_GIObjectInfo_wrapper(GIObjectInfo ** _ptr);
extern void glib_autoptr_destroy_GIObjectInfo_wrapper(void * _ptr);
extern void glib_listautoptr_cleanup_GIObjectInfo_wrapper(GList ** _l);
extern void glib_slistautoptr_cleanup_GIObjectInfo_wrapper(GSList ** _l);
extern void glib_queueautoptr_cleanup_GIObjectInfo_wrapper(GQueue ** _q);
extern void glib_autoptr_clear_GIPropertyInfo_wrapper(GIPropertyInfo * _ptr);
extern void glib_autoptr_cleanup_GIPropertyInfo_wrapper(GIPropertyInfo ** _ptr);
extern void glib_autoptr_destroy_GIPropertyInfo_wrapper(void * _ptr);
extern void glib_listautoptr_cleanup_GIPropertyInfo_wrapper(GList ** _l);
extern void glib_slistautoptr_cleanup_GIPropertyInfo_wrapper(GSList ** _l);
extern void glib_queueautoptr_cleanup_GIPropertyInfo_wrapper(GQueue ** _q);
extern void glib_autoptr_clear_GIRegisteredTypeInfo_wrapper(GIRegisteredTypeInfo * _ptr);
extern void glib_autoptr_cleanup_GIRegisteredTypeInfo_wrapper(GIRegisteredTypeInfo ** _ptr);
extern void glib_autoptr_destroy_GIRegisteredTypeInfo_wrapper(void * _ptr);
extern void glib_listautoptr_cleanup_GIRegisteredTypeInfo_wrapper(GList ** _l);
extern void glib_slistautoptr_cleanup_GIRegisteredTypeInfo_wrapper(GSList ** _l);
extern void glib_queueautoptr_cleanup_GIRegisteredTypeInfo_wrapper(GQueue ** _q);
extern void glib_autoptr_clear_GISignalInfo_wrapper(GISignalInfo * _ptr);
extern void glib_autoptr_cleanup_GISignalInfo_wrapper(GISignalInfo ** _ptr);
extern void glib_autoptr_destroy_GISignalInfo_wrapper(void * _ptr);
extern void glib_listautoptr_cleanup_GISignalInfo_wrapper(GList ** _l);
extern void glib_slistautoptr_cleanup_GISignalInfo_wrapper(GSList ** _l);
extern void glib_queueautoptr_cleanup_GISignalInfo_wrapper(GQueue ** _q);
extern void glib_autoptr_clear_GIStructInfo_wrapper(GIStructInfo * _ptr);
extern void glib_autoptr_cleanup_GIStructInfo_wrapper(GIStructInfo ** _ptr);
extern void glib_autoptr_destroy_GIStructInfo_wrapper(void * _ptr);
extern void glib_listautoptr_cleanup_GIStructInfo_wrapper(GList ** _l);
extern void glib_slistautoptr_cleanup_GIStructInfo_wrapper(GSList ** _l);
extern void glib_queueautoptr_cleanup_GIStructInfo_wrapper(GQueue ** _q);
extern void glib_autoptr_clear_GITypeInfo_wrapper(GITypeInfo * _ptr);
extern void glib_autoptr_cleanup_GITypeInfo_wrapper(GITypeInfo ** _ptr);
extern void glib_autoptr_destroy_GITypeInfo_wrapper(void * _ptr);
extern void glib_listautoptr_cleanup_GITypeInfo_wrapper(GList ** _l);
extern void glib_slistautoptr_cleanup_GITypeInfo_wrapper(GSList ** _l);
extern void glib_queueautoptr_cleanup_GITypeInfo_wrapper(GQueue ** _q);
extern void glib_autoptr_clear_GIUnionInfo_wrapper(GIUnionInfo * _ptr);
extern void glib_autoptr_cleanup_GIUnionInfo_wrapper(GIUnionInfo ** _ptr);
extern void glib_autoptr_destroy_GIUnionInfo_wrapper(void * _ptr);
extern void glib_listautoptr_cleanup_GIUnionInfo_wrapper(GList ** _l);
extern void glib_slistautoptr_cleanup_GIUnionInfo_wrapper(GSList ** _l);
extern void glib_queueautoptr_cleanup_GIUnionInfo_wrapper(GQueue ** _q);
extern void glib_autoptr_clear_GIUnresolvedInfo_wrapper(GIUnresolvedInfo * _ptr);
extern void glib_autoptr_cleanup_GIUnresolvedInfo_wrapper(GIUnresolvedInfo ** _ptr);
extern void glib_autoptr_destroy_GIUnresolvedInfo_wrapper(void * _ptr);
extern void glib_listautoptr_cleanup_GIUnresolvedInfo_wrapper(GList ** _l);
extern void glib_slistautoptr_cleanup_GIUnresolvedInfo_wrapper(GSList ** _l);
extern void glib_queueautoptr_cleanup_GIUnresolvedInfo_wrapper(GQueue ** _q);
extern void glib_autoptr_clear_GIValueInfo_wrapper(GIValueInfo * _ptr);
extern void glib_autoptr_cleanup_GIValueInfo_wrapper(GIValueInfo ** _ptr);
extern void glib_autoptr_destroy_GIValueInfo_wrapper(void * _ptr);
extern void glib_listautoptr_cleanup_GIValueInfo_wrapper(GList ** _l);
extern void glib_slistautoptr_cleanup_GIValueInfo_wrapper(GSList ** _l);
extern void glib_queueautoptr_cleanup_GIValueInfo_wrapper(GQueue ** _q);
extern void glib_autoptr_clear_GIVFuncInfo_wrapper(GIVFuncInfo * _ptr);
extern void glib_autoptr_cleanup_GIVFuncInfo_wrapper(GIVFuncInfo ** _ptr);
extern void glib_autoptr_destroy_GIVFuncInfo_wrapper(void * _ptr);
extern void glib_listautoptr_cleanup_GIVFuncInfo_wrapper(GList ** _l);
extern void glib_slistautoptr_cleanup_GIVFuncInfo_wrapper(GSList ** _l);
extern void glib_queueautoptr_cleanup_GIVFuncInfo_wrapper(GQueue ** _q);
extern void glib_auto_cleanup_GIArgInfo_wrapper(GIArgInfo * _ptr);
extern void glib_auto_cleanup_GITypeInfo_wrapper(GITypeInfo * _ptr);