glib/girepository/girepository-Linux.odin


    @(link_name = "glib_listautoptr_cleanup_GIInterfaceInfo_wrapper")
    listautoptr_cleanup_GIInterfaceInfo :: proc(_l: ^^glib.List) ---

    @(link_name = "glib_slistautoptr_cleanup_GIInterfaceInfo_wrapper")
    slistautoptr_cleanup_GIInterfaceInfo :: proc(_l: ^^glib.SList) ---

    @(link_name = "glib_queueautoptr_cleanup_GIInterfaceInfo_wrapper")
    queueautoptr_cleanup_GIInterfaceInfo :: proc(_q: ^^glib.Queue) ---

    @(link_name = "glib_autoptr_clear_GIObjectInfo_wrapper")
    autoptr_clear_GIObjectInfo :: proc(_ptr: ^ObjectInfo) ---

    @(link_name = "glib_autoptr_cleanup_GIObjectInfo_wrapper")
    autoptr_cleanup_GIObjectInfo :: proc(_ptr: ^^ObjectInfo) ---

    @(link_name = "glib_autoptr_destroy_GIObjectInfo_wrapper")
    autoptr_destroy_GIObjectInfo :: proc(_ptr: rawptr) ---

    @(link_name = "glib_listautoptr_cleanup_GIObjectInfo_wrapper")
    listautoptr_cleanup_GIObjectInfo :: proc(_l: ^^glib.List) ---

    @(link_name = "glib_slistautoptr_cleanup_GIObjectInfo_wrapper")
    slistautoptr_cleanup_GIObjectInfo :: proc(_l: ^^glib.SList) ---

    @(link_name = "glib_queueautoptr_cleanup_GIObjectInfo_wrapper")
    queueautoptr_cleanup_GIObjectInfo :: proc(_q: ^^glib.Queue) ---

    @(link_name = "glib_autoptr_clear_GIPropertyInfo_wrapper")
    autoptr_clear_GIPropertyInfo :: proc(_ptr: ^PropertyInfo) ---

    @(link_name = "glib_autoptr_cleanup_GIPropertyInfo_wrapper")
    autoptr_cleanup_GIPropertyInfo :: proc(_ptr: ^^PropertyInfo) ---

    @(link_name = "glib_autoptr_destroy_GIPropertyInfo_wrapper")
    autoptr_destroy_GIPropertyInfo :: proc(_ptr: rawptr) ---

    @(link_name = "glib_listautoptr_cleanup_GIPropertyInfo_wrapper")
    listautoptr_cleanup_GIPropertyInfo :: proc(_l: ^^glib.List) ---

    @(link_name = "glib_slistautoptr_cleanup_GIPropertyInfo_wrapper")
    slistautoptr_cleanup_GIPropertyInfo :: proc(_l: ^^glib.SList) ---

    @(link_name = "glib_queueautoptr_cleanup_GIPropertyInfo_wrapper")
    queueautoptr_cleanup_GIPropertyInfo :: proc(_q: ^^glib.Queue) ---

    @(link_name = "glib_autoptr_clear_GIRegisteredTypeInfo_wrapper")
    autoptr_clear_GIRegisteredTypeInfo :: proc(_ptr: ^RegisteredTypeInfo) ---

    @(link_name = "glib_autoptr_cleanup_GIRegisteredTypeInfo_wrapper")
    autoptr_cleanup_GIRegisteredTypeInfo :: proc(_ptr: ^^RegisteredTypeInfo) ---

    @(link_name = "glib_autoptr_destroy_GIRegisteredTypeInfo_wrapper")
    autoptr_destroy_GIRegisteredTypeInfo :: proc(_ptr: rawptr) ---

    @(link_name = "glib_listautoptr_cleanup_GIRegisteredTypeInfo_wrapper")
    listautoptr_cleanup_GIRegisteredTypeInfo :: proc(_l: ^^glib.List) ---

    @(link_name = "glib_slistautoptr_cleanup_GIRegisteredTypeInfo_wrapper")
    slistautoptr_cleanup_GIRegisteredTypeInfo :: proc(_l: ^^glib.SList) ---

    @(link_name = "glib_queueautoptr_cleanup_GIRegisteredTypeInfo_wrapper")
    queueautoptr_cleanup_GIRegisteredTypeInfo :: proc(_q: ^^glib.Queue) ---

    @(link_name = "glib_autoptr_clear_GISignalInfo_wrapper")
    autoptr_clear_GISignalInfo :: proc(_ptr: ^SignalInfo) ---

    @(link_name = "glib_autoptr_cleanup_GISignalInfo_wrapper")
    autoptr_cleanup_GISignalInfo :: proc(_ptr: ^^SignalInfo) ---

    @(link_name = "glib_autoptr_destroy_GISignalInfo_wrapper")
    autoptr_destroy_GISignalInfo :: proc(_ptr: rawptr) ---

    @(link_name = "glib_listautoptr_cleanup_GISignalInfo_wrapper")
    listautoptr_cleanup_GISignalInfo :: proc(_l: ^^glib.List) ---

    @(link_name = "glib_slistautoptr_cleanup_GISignalInfo_wrapper")
    slistautoptr_cleanup_GISignalInfo :: proc(_l: ^^glib.SList) ---

    @(link_name = "glib_queueautoptr_cleanup_GISignalInfo_wrapper")
    queueautoptr_cleanup_GISignalInfo :: proc(_q: ^^glib.Queue) ---

    @(link_name = "glib_autoptr_clear_GIStructInfo_wrapper")
    autoptr_clear_GIStructInfo :: proc(_ptr: ^StructInfo) ---

    @(link_name = "glib_autoptr_cleanup_GIStructInfo_wrapper")
    autoptr_cleanup_GIStructInfo :: proc(_ptr: ^^StructInfo) ---

    @(link_name = "glib_autoptr_destroy_GIStructInfo_wrapper")
    autoptr_destroy_GIStructInfo :: proc(_ptr: rawptr) ---

    @(link_name = "glib_listautoptr_cleanup_GIStructInfo_wrapper")
    listautoptr_cleanup_GIStructInfo :: proc(_l: ^^glib.List) ---

    @(link_name = "glib_slistautoptr_cleanup_GIStructInfo_wrapper")
    slistautoptr_cleanup_GIStructInfo :: proc(_l: ^^glib.SList) ---

    @(link_name = "glib_queueautoptr_cleanup_GIStructInfo_wrapper")
    queueautoptr_cleanup_GIStructInfo :: proc(_q: ^^glib.Queue) ---

    @(link_name = "glib_autoptr_clear_GITypeInfo_wrapper")
    autoptr_clear_GITypeInfo :: proc(_ptr: ^TypeInfo) ---

    @(link_name = "glib_autoptr_cleanup_GITypeInfo_wrapper")
    autoptr_cleanup_GITypeInfo :: proc(_ptr: ^^TypeInfo) ---

    @(link_name = "glib_autoptr_destroy_GITypeInfo_wrapper")
    autoptr_destroy_GITypeInfo :: proc(_ptr: rawptr) ---

    @(link_name = "glib_listautoptr_cleanup_GITypeInfo_wrapper")
    listautoptr_cleanup_GITypeInfo :: proc(_l: ^^glib.List) ---

    @(link_name = "glib_slistautoptr_cleanup_GITypeInfo_wrapper")
    slistautoptr_cleanup_GITypeInfo :: proc(_l: ^^glib.SList) ---

    @(link_name = "glib_queueautoptr_cleanup_GITypeInfo_wrapper")
    queueautoptr_cleanup_GITypeInfo :: proc(_q: ^^glib.Queue) ---

    @(link_name = "glib_autoptr_clear_GIUnionInfo_wrapper")
    autoptr_clear_GIUnionInfo :: proc(_ptr: ^UnionInfo) ---

    @(link_name = "glib_autoptr_cleanup_GIUnionInfo_wrapper")
    autoptr_cleanup_GIUnionInfo :: proc(_ptr: ^^UnionInfo) ---

    @(link_name = "glib_autoptr_destroy_GIUnionInfo_wrapper")
    autoptr_destroy_GIUnionInfo :: proc(_ptr: rawptr) ---

    @(link_name = "glib_listautoptr_cleanup_GIUnionInfo_wrapper")
    listautoptr_cleanup_GIUnionInfo :: proc(_l: ^^glib.List) ---

    @(link_name = "glib_slistautoptr_cleanup_GIUnionInfo_wrapper")
    slistautoptr_cleanup_GIUnionInfo :: proc(_l: ^^glib.SList) ---

    @(link_name = "glib_queueautoptr_cleanup_GIUnionInfo_wrapper")
    queueautoptr_cleanup_GIUnionInfo :: proc(_q: ^^glib.Queue) ---

    @(link_name = "glib_autoptr_clear_GIUnresolvedInfo_wrapper")
    autoptr_clear_GIUnresolvedInfo :: proc(_ptr: ^UnresolvedInfo) ---

    @(link_name = "glib_autoptr_cleanup_GIUnresolvedInfo_wrapper")
    autoptr_cleanup_GIUnresolvedInfo :: proc(_ptr: ^^UnresolvedInfo) ---

    @(link_name = "glib_autoptr_destroy_GIUnresolvedInfo_wrapper")
    autoptr_destroy_GIUnresolvedInfo :: proc(_ptr: rawptr) ---

    @(link_name = "glib_listautoptr_cleanup_GIUnresolvedInfo_wrapper")
    listautoptr_cleanup_GIUnresolvedInfo :: proc(_l: ^^glib.List) ---

    @(link_name = "glib_slistautoptr_cleanup_GIUnresolvedInfo_wrapper")
    slistautoptr_cleanup_GIUnresolvedInfo :: proc(_l: ^^glib.SList) ---

    @(link_name = "glib_queueautoptr_cleanup_GIUnresolvedInfo_wrapper")
    queueautoptr_cleanup_GIUnresolvedInfo :: proc(_q: ^^glib.Queue) ---

    @(link_name = "glib_autoptr_clear_GIValueInfo_wrapper")
    autoptr_clear_GIValueInfo :: proc(_ptr: ^ValueInfo) ---

    @(link_name = "glib_autoptr_cleanup_GIValueInfo_wrapper")
    autoptr_cleanup_GIValueInfo :: proc(_ptr: ^^ValueInfo) ---

    @(link_name = "glib_autoptr_destroy_GIValueInfo_wrapper")
    autoptr_destroy_GIValueInfo :: proc(_ptr: rawptr) ---

    @(link_name = "glib_listautoptr_cleanup_GIValueInfo_wrapper")
    listautoptr_cleanup_GIValueInfo :: proc(_l: ^^glib.List) ---

    @(link_name = "glib_slistautoptr_cleanup_GIValueInfo_wrapper")
    slistautoptr_cleanup_GIValueInfo :: proc(_l: ^^glib.SList) ---

    @(link_name = "glib_queueautoptr_cleanup_GIValueInfo_wrapper")
    queueautoptr_cleanup_GIValueInfo :: proc(_q: ^^glib.Queue) ---

    @(link_name = "glib_autoptr_clear_GIVFuncInfo_wrapper")
    autoptr_clear_GIVFuncInfo :: proc(_ptr: ^VFuncInfo) ---

    @(link_name = "glib_autoptr_cleanup_GIVFuncInfo_wrapper")
    autoptr_cleanup_GIVFuncInfo :: proc(_ptr: ^^VFuncInfo) ---

    @(link_name = "glib_autoptr_destroy_GIVFuncInfo_wrapper")
    autoptr_destroy_GIVFuncInfo :: proc(_ptr: rawptr) ---

    @(link_name = "glib_listautoptr_cleanup_GIVFuncInfo_wrapper")
    listautoptr_cleanup_GIVFuncInfo :: proc(_l: ^^glib.List) ---

    @(link_name = "glib_slistautoptr_cleanup_GIVFuncInfo_wrapper")
    slistautoptr_cleanup_GIVFuncInfo :: proc(_l: ^^glib.SList) ---

    @(link_name = "glib_queueautoptr_cleanup_GIVFuncInfo_wrapper")
    queueautoptr_cleanup_GIVFuncInfo :: proc(_q: ^^glib.Queue) ---

    @(link_name = "glib_auto_cleanup_GIArgInfo_wrapper")
    auto_cleanup_GIArgInfo :: proc(_ptr: ^ArgInfo) ---

    @(link_name = "glib_auto_cleanup_GITypeInfo_wrapper")
    auto_cleanup_GITypeInfo :: proc(_ptr: ^TypeInfo) ---

}

when #config(GLIB_STATIC, false) {
    when (ODIN_OS == .Linux) && (ODIN_ARCH == .amd64) {
    foreign import girepository_runic { "../../lib/linux/x86_64/libgirepository-2.0.a", "../../lib/linux/x86_64/libgirepository-wrapper.a", "system:ffi", "system:pcre2-8" }
} 
} else {
    when (ODIN_OS == .Linux) && (ODIN_ARCH == .amd64) {
    foreign import girepository_runic { "system:girepository-2.0", "../../lib/linux/x86_64/libgirepository-wrapper.a" }
} 
}

when #config(GLIB_STATIC, false) {
    when (ODIN_OS == .Linux) && (ODIN_ARCH == .arm64) {
    foreign import girepository_runic { "../../lib/linux/aarch64/libgirepository-2.0.a", "../../lib/linux/aarch64/libgirepository-wrapper.a", "system:ffi", "system:pcre2-8" }
} 
} else {
    when (ODIN_OS == .Linux) && (ODIN_ARCH == .arm64) {
    foreign import girepository_runic { "system:girepository-2.0", "../../lib/linux/aarch64/libgirepository-wrapper.a" }
} 
}

